# c-test-sandbox

my_project/: .gdbinit  CMakeLists.txt  Makefile  hello_test.cc  some_module.c  some_module.h  some_module2.c
